--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,11 +1,11 @@
 <view style="margin:30px 0">
   <view class="userinfo">
-    <block wx:if="{{canIUseOpenData}}">
+    <button wx:if="{{canIUseOpenData}}" bindgetphonenumber="getPhoneNumber" open-type="getPhoneNumber">
       <view class="userinfo-avatar" bindtap="bindViewTap">
         <open-data type="userAvatarUrl"></open-data>
       </view>
       <open-data type="userNickName"></open-data>
-    </block>
+    </button>
     <block wx:elif="{{!hasUserInfo}}">
       <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
       <button wx:elif="{{canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
